# Marinara-Engine-Bolognese

./: .env.example  .gitignore  .graphifyignore  .ignore  .npmrc  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.lite  MARI_NOODLER_SEPARATION_TASK.md  MARI_PHASE2_TASK.md  MARI_PHASE3_TASK.md  MARI_SUGGESTION_CHIPS_TASK.md  README.md  docker-compose.yml  eslint.full-report.config.js  knip.json  package.json  paseo.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  start-e377a9df.bat  start-local.bat  start-termux.sh  start.bat  start.sh
.github/: pull_request_template.md
android/: README.md  build-apk.sh
docs/: AGENT_SYSTEM.md  ARCHITECTURE_MAP.md  BOT_BROWSER.md  CONFIGURATION.md  CONVERSATION.md  CONVERSATION_CALLS.md  CUSTOM_EMOJIS_STICKERS.md  CUSTOM_TOOLS.md  EXTENSIONS.md  FAQ.md  FILE_STORAGE_MIGRATION.md  FRONTEND.md  GAME_MODE.md  GENERATION_PARAMETERS.md  IMAGE_GENERATION.md  INSTALLATION.md  IOS_PWA_BOTTOM_SAFE_AREA.md  KNOWLEDGE_SOURCES.md  MACROS.md  PRESETS.md  PROFESSOR_MARI.md  REFACTOR_PARITY_PIPELINE.md  REGEX_SCRIPTS.md  REMOTE_ACCESS.md  ROLEPLAY.md  SCENE_VIDEO_GENERATION.md  STORYBOARD_ENGINE_GUIDE.md  TROUBLESHOOTING.md  UPGRADING.md  WORLD_ENGINE.md  card-css-theming-guide.md  release-update-strategy.md
e2e/: core-flows.e2e.ts  spatial-context.e2e.ts
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  manifest.json
scratch/: bugfix-verification.json  issue-2101-bugfix-verification.json
scripts/: check-discovery-metadata.mjs  dev.mjs  (+13 more)
src-tauri/crates/llm/: Cargo.toml
src-tauri/crates/llm/src/: lib.rs
(+607 files in other folders)
