[package]
name = "marinara-llm"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
marinara-core = { path = "../core" }
marinara-security = { path = "../security" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["net", "macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v5"] }
